added oop_import example

--- a/example/font_awesome/font_awesome.html
+++ b/example/font_awesome/font_awesome.html
@@ -7,6 +7,7 @@
     <!-- end <forehead fontAwesome> -->
     <link rel="import" href="../packages/oops/components/oops_svg.html">
     <link rel="import" href="../packages/oops/components/oops_font_awesome.html">
+    <link rel="import" href="../packages/oops/components/oops_import.html">
     <link rel="stylesheet" href="../packages/oops/components/oops.css">
 
     <script type="application/dart">export 'package:polymer/init.dart';</script>
