--- a/example/svg_use/svg_use.html
+++ b/example/svg_use/svg_use.html
@@ -6,6 +6,7 @@
     <!-- end <forehead svgUse> -->
     <link rel="import" href="../packages/oops/components/oops_svg.html">
     <link rel="import" href="../packages/oops/components/oops_font_awesome.html">
+    <link rel="import" href="../packages/oops/components/oops_import.html">
     <link rel="stylesheet" href="../packages/oops/components/oops.css">
 
     <script type="application/dart">export 'package:polymer/init.dart';</script>
